// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 1`] = `
<PopupTest
  closeOnDocumentClick={true}
  on="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 2`] = `
<PopupTest
  closeOnDocumentClick={true}
  on="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly  1`] = `
<Popup
  arrow={true}
  arrowStyle={Object {}}
  className=""
  closeOnDocumentClick={true}
  closeOnEscape={true}
  contentStyle={Object {}}
  defaultOpen={false}
  keepTooltipInside={false}
  lockScroll={false}
  modal={false}
  mouseEnterDelay={100}
  mouseLeaveDelay={100}
  offsetX={0}
  offsetY={0}
  on="click"
  onClose={[Function]}
  onOpen={[Function]}
  open={false}
  overlayStyle={Object {}}
  position="bottom center"
  trigger={
    <button>
       Trigger
    </button>
  }
>
  popup content
</Popup>
`;

exports[`it should render correctly on click and will update the the popup content text   1`] = `
<PopupContentAsFunction>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "click",
      ]
    }
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      <div>
         Popup content 
        open
         
      </div>
    </div>
  </Popup>
</PopupContentAsFunction>
`;

exports[`it should render correctly on click and will update the the popup content text   2`] = `
<PopupContentAsFunction>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "click",
      ]
    }
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
  </Popup>
</PopupContentAsFunction>
`;

exports[`it should render correctly on click and will update the trigger text   1`] = `
<PopupTriggerFunction>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "click",
      ]
    }
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={[Function]}
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
        Button nested 
        open
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTriggerFunction>
`;

exports[`it should render correctly on click and will update the trigger text   2`] = `
<PopupTriggerFunction>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "click",
      ]
    }
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={[Function]}
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
        Button nested 
        close
      </button>
    </Ref>
  </Popup>
</PopupTriggerFunction>
`;

exports[`it should rendered in the bottom center position   1`] = `
<PopupTest
  on="click"
  position="bottom center"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the bottom left position   1`] = `
<PopupTest
  on="click"
  position="bottom left"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom left"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the bottom right position   1`] = `
<PopupTest
  on="click"
  position="bottom right"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom right"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left bottom position   1`] = `
<PopupTest
  on="click"
  position="left bottom"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="left bottom"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left center position   1`] = `
<PopupTest
  on="click"
  position="left center"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="left center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left top position   1`] = `
<PopupTest
  on="click"
  position="left top"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="left top"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right bottom position   1`] = `
<PopupTest
  on="click"
  position="right bottom"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="right bottom"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right center position   1`] = `
<PopupTest
  on="click"
  position="right center"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="right center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right top position   1`] = `
<PopupTest
  on="click"
  position="right top"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="right top"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top center position   1`] = `
<PopupTest
  on="click"
  position="top center"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="top center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top left position   1`] = `
<PopupTest
  on="click"
  position="top left"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="top left"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top right position   1`] = `
<PopupTest
  on="click"
  position="top right"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="top right"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it shouldn't close on click outside popup  1`] = `
<PopupTest
  on="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
  </Popup>
</PopupTest>
`;

exports[`it shouldn't close on click outside popup  2`] = `
<PopupTest
  on="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    closeOnEscape={true}
    contentStyle={Object {}}
    defaultOpen={false}
    keepTooltipInside={false}
    lockScroll={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offsetX={0}
    offsetY={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <Ref
      innerRef={[Function]}
      key="R"
    >
      <button
        key="T"
        onClick={[Function]}
      >
         Trigger
      </button>
    </Ref>
  </Popup>
</PopupTest>
`;
